--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "ali-oss": "^6.2.1",
     "axios": "^0.19.0",
     "cross-env": "^5.2.0",
     "element-ui": "^2.4.11",
