--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "ali-oss": "^6.2.1",
     "axios": "^0.19.0",
+    "core-js": "^2.6.10",
     "cross-env": "^5.2.0",
     "element-ui": "^2.4.11",
     "koa": "^2.6.2",
