--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "koa-router": "^7.4.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "v-viewer": "^1.5.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
