--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^2.6.10",
     "cross-env": "^5.2.0",
     "element-ui": "^2.4.11",
+    "faye-websocket": "^0.11.3",
     "koa": "^2.6.2",
     "koa-body": "^4.1.1",
     "koa-route": "^3.2.0",
